--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.0.0",
     "ebay-api": "^1.13.7",
     "express": "^4.17.0",
+    "mysql": "^2.17.1",
     "request": "^2.88.0"
   }
 }
